--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>Marriages</title>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
+<link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+<div class="wrapper">
+  <ul class= "navigation">
+    <li><a href="index.html">Home</a></li>
+    <li>About Marriages</li>
+				
+  </ul>
+  <div class="content">
+				<h1>
+					Marriages
+				</h1>
+	<div class="main">
+					<!-- InstanceBeginEditable name="content" -->
+					<table width="887" border="1">
+					  <tr>
+					    <td width="500" rowspan="8"><img src="images/homepage.jpg" width="500" height="500" alt="Homepage" /></td>
+					    <td width="371">The Marriages</td>
+				      </tr>
+					  <tr>
+					    <td>Legal</td>
+				      </tr>
+					  <tr>
+					    <td>Jewish</td>
+				      </tr>
+					  <tr>
+					    <td>Chinese</td>
+				      </tr>
+					  <tr>
+					    <td>Muslim</td>
+				      </tr>
+					  <tr>
+					    <td>Hindu</td>
+				      </tr>
+					  <tr>
+					    <td>Christianity</td>
+				      </tr>
+					  <tr>
+					    <td>Greek</td>
+				      </tr>
+				    </table>
+					<p>&nbsp;</p>
+                    <!-- InstanceEndEditable -->
+    </div>
+  </div>
+</div>
 </body>
-</html>
+<!-- InstanceEnd --></html>
