made navigations part 1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <div class="wrapper">
   <ul class= "navigation">
     <li><a href="index.html">Home</a></li>
-    <li>About Marriages</li>
+    <li><a href="about-marriages.html">About Marriages</a></li>
+    <li><a href="videos.html">Videos</a></li>
+    <li><a href="extras.html"> Extras</a></li>
 				
   </ul>
   <div class="content">
@@ -23,35 +25,36 @@
 				</h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
-					<table width="887" border="1">
+					<div class="labels"> <table width="" border="1">
 					  <tr>
-					    <td width="500" rowspan="8"><img src="images/homepage.jpg" width="500" height="500" alt="Homepage" /></td>
-					    <td width="371">The Marriages</td>
+					    <td width="514" rowspan="8"><img src="images/homepage.jpg" width="500" height="500" alt="Homepage" /></td>
+					    <td width="368"><div align="center">
+					      <h3><strong>The Marriages</strong></h3>
+					    </div></td>
 				      </tr>
 					  <tr>
-					    <td>Legal</td>
+					    <td><div align="center">Legal</div></td>
 				      </tr>
 					  <tr>
-					    <td>Jewish</td>
+					    <td><div align="center">Jewish</div></td>
 				      </tr>
 					  <tr>
-					    <td>Chinese</td>
+					    <td><div align="center">Chinese</div></td>
 				      </tr>
 					  <tr>
-					    <td>Muslim</td>
+					    <td><div align="center">Muslim</div></td>
 				      </tr>
 					  <tr>
-					    <td>Hindu</td>
+					    <td><div align="center">Hindu</div></td>
 				      </tr>
 					  <tr>
-					    <td>Christianity</td>
+					    <td><div align="center">Christianity</div></td>
 				      </tr>
 					  <tr>
-					    <td>Greek</td>
+					    <td><div align="center">Greek</div></td>
 				      </tr>
-				    </table>
-					<p>&nbsp;</p>
-                    <!-- InstanceEndEditable -->
+				    </table></div>
+					<!-- InstanceEndEditable -->
     </div>
   </div>
 </div>
