--- a/about-marriages.html
+++ b/about-marriages.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>About Marriages</title>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
+<link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+<div class="wrapper">
+  <ul class= "navigation">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about-marriages.html">About Marriages</a></li>
+    <li><a href="videos.html">Videos</a></li>
+    <li><a href="extras.html"> Extras</a></li>
+				
+  </ul>
+  <div class="content">
+				<h1>
+				Marriages<strong>: One Name Different Versions</strong></h1>
+	<div class="main">
+					<!-- InstanceBeginEditable name="content" -->
+					<p>This is placeholder.</p>
+					<!-- InstanceEndEditable -->
+    </div>
+  </div>
+</div>
 </body>
-</html>
+<!-- InstanceEnd --></html>
