--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Marriages</title>
+<title>Homepage</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -21,37 +21,31 @@
   </ul>
   <div class="content">
 				<h1>
-					Marriages
-				</h1>
+				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
 					<div class="labels"> <table width="" border="1">
 					  <tr>
-					    <td width="514" rowspan="8"><img src="images/homepage.jpg" width="500" height="500" alt="Homepage" /></td>
-					    <td width="368"><div align="center">
-					      <h3><strong>The Marriages</strong></h3>
-					    </div></td>
+					    <td width="514" rowspan="7"><h1><strong>The Marriages</strong><img src="images/homepage.jpg" width="500" height="500" alt="Homepage" /></h1></td>
+					    <td width="368"><div align="center"><a href="legal.html">Legal</a></div></td>
 				      </tr>
 					  <tr>
-					    <td><div align="center">Legal</div></td>
+					    <td><div align="center"><a href="jewish.html">Jewish</a></div></td>
 				      </tr>
 					  <tr>
-					    <td><div align="center">Jewish</div></td>
+					    <td><div align="center"><a href="chinese.html">Chinese</a></div></td>
 				      </tr>
 					  <tr>
-					    <td><div align="center">Chinese</div></td>
+					    <td><div align="center"><a href="muslim.html">Muslim</a></div></td>
 				      </tr>
 					  <tr>
-					    <td><div align="center">Muslim</div></td>
+					    <td><div align="center"><a href="hindu.html">Hindu</a></div></td>
 				      </tr>
 					  <tr>
-					    <td><div align="center">Hindu</div></td>
+					    <td><div align="center"><a href="christianity.html">Christianity</a></div></td>
 				      </tr>
 					  <tr>
-					    <td><div align="center">Christianity</div></td>
-				      </tr>
-					  <tr>
-					    <td><div align="center">Greek</div></td>
+					    <td><div align="center"><a href="greek.html">Greek</a></div></td>
 				      </tr>
 				    </table></div>
 					<!-- InstanceEndEditable -->
